[package]
name = "humanoid"
version = "0.1.0"
edition = "2021"

[dependencies]
radix_fmt = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = ["rand", "serde", "cuid2"]
rand = ["dep:rand"]
serde = ["dep:serde"]
cuid2 = ["radix_fmt", "rand"]
radix_fmt = ["dep:radix_fmt"]
